--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -212,12 +212,14 @@
                 android:layout_height="50dp"
                 />
             <ImageView
+                android:id="@+id/btnGGLogin"
                 android:src="@drawable/img_login_with_gg"
                 android:layout_width="295dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="10dp"
                 />
             <LinearLayout
+
                 android:layout_marginTop="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="23dp"
