--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,6 +58,7 @@
                 android:src="@drawable/ic_close" />
 
             <LinearLayout
+                android:id="@+id/llUserInfo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
