--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -86,6 +86,7 @@
 
 
           <RelativeLayout
+              android:id="@+id/rltUserPassword"
               android:layout_marginTop="10dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
