--- a/app/src/main/res/layout/item_order_history_layout.xml
+++ b/app/src/main/res/layout/item_order_history_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:id="@+id/rltGoToOD"
     android:layout_height="wrap_content"
     android:padding="10dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -42,6 +43,7 @@
         android:layout_marginStart="10dp"
         android:layout_centerVertical="true"
         android:orientation="vertical"
+        android:gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <TextView
@@ -52,19 +54,13 @@
             android:text="- 24.000.000 VND"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
-      <androidx.cardview.widget.CardView
-          android:layout_gravity="center"
-          android:layout_width="60dp"
-          app:cardCornerRadius="10dp"
-          android:layout_height="15dp">
-        <ImageView
-            android:id="@+id/imgStatus"
-            android:background="@color/colorPrimary"
-            android:scaleType="centerCrop"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/ic_logo_white"
-            />
-      </androidx.cardview.widget.CardView>
+    <TextView
+        android:id="@+id/tvStatusOrder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="12dp"
+        android:textStyle="bold"
+        android:text="Đang giao hàng"
+        />
     </LinearLayout>
 </RelativeLayout>
